--- a/index.html
+++ b/index.html
@@ -1590,8 +1590,8 @@ todos os itens*/</span>
             <section class="code-html">
                 <code>
                     <pre>
-&lt;<span class="azul">input type</span>=<span class="ama">"submit"</span> <span class="azul">value</span>=<span class="ama">"Enviar"</span>&gt;
-<input type="submit" value="Enviar">
+&lt;<span class="azul">input type</span>=<span class="ama">"submit"</span> <span class="azul">value</span>=<span class="ama">"<abbr title="texto que será exibido no botão">Enviar</abbr>"</span>&gt;
+<input type="submit" value="Enviar"></abbr>
                     </pre>
                 </code>
             </section>
@@ -1658,6 +1658,9 @@ todos os itens*/</span>
                 <li>&lt;<span class="azul">input type</span> =<span class="ama">"email"</span>&gt; <input type="email"></li>
                 <li>&lt;<span class="azul">input type</span> =<span class="ama">"file"</span>&gt; <input type="file"></li>
                 <li>&lt;<span class="azul">input type</span> =<span class="ama">"hidden"</span>&gt; <input type="hidden"> <label for="hidden"> clique aqui</label></li>
+                <li>&lt;<span class="azul">input type</span> =<span class="ama">"month"</span>&gt;<input type="month"></label></li>
+                <li>&lt;<span class="azul">input type</span> =<span class="ama">"date"</span>&gt;<input type="date"></label></li>
+                <li>&lt;<span class="azul">input type</span> =<span class="ama">"time"</span>&gt;<input type="time"></label></li>
             </ul>
     </section>
 
