--- a/index.html
+++ b/index.html
@@ -1683,8 +1683,11 @@ todos os itens*/</span>
         <li><span class="ama">required</span>: Para ser obrigatório colocar algum dado.</li>
         <li><span class="ama">minlength <span style="color: black;">ou</span> maxlength</span>: Para definir o mínimo ou o máximo de caracteres.</li>
         <li><span class="ama">size="número de caracteres"</span>: Para definir a quantidade de caracteres que serão exibidos na tela.</li>
-        <li><span class="ama">placeholder"descrição"</span>Para exibir uma descrição na caixa.</li>
+        <li><span class="ama">placeholder="descrição"</span>Para exibir uma descrição na caixa.</li>
+        <li><span class="ama">Min <span style="color: black;">ou</span> Max</span>: é para caixas com atributos numéricos</li>
+        <li><span class="ama">Step="derfina uma numeração"</span>: é para definir o intervalo de números. ex: <strong><span class="azul">step</span>=<span class="ama">"0.1"</span></strong></li>
     </ul>
+
 </div>
 
 <script src="script.js"></script>
