--- a/index.html
+++ b/index.html
@@ -1649,18 +1649,19 @@ todos os itens*/</span>
                 <li>&lt;<span class="azul">input type</span> =<span class="ama">"text"</span>&gt; <input type="text" placeholder="Seu texto aqui"></li>
                 <li>&lt;<span class="azul">input type</span> =<span class="ama">"password"</span>&gt;
                 <input type="password" placeholder="Digite sua senha aqui"></li>
-                <li>&lt;<span class="azul">input type</span> =<span class="ama">"radio"</span>&gt; <input type="radio"><input type="radio"><input type="radio"></li>
+                <li>&lt;<span class="azul">input type</span> =<span class="ama">"<abbr title="Para esse type, quando quiser marcar somente uma caixa colcoa todos com o mesmo name.">radio</abbr>"</span>&gt; <input type="radio"><input type="radio"><input type="radio"></li>
                 <li>&lt;<span class="azul">input type</span> =<span class="ama">"number"</span>&gt; <input type="number" placeholder="digite um número"></li>
                 <li>&lt;<span class="azul">input type</span> =<span class="ama">"image"</span>&gt; <input type="image"></li>
                 <li>&lt;<span class="azul">input type</span> =<span class="ama">"checkbox"</span>&gt; <input type="checkbox"></li>
-                <li>&lt;<span class="azul">input type</span> =<span class="ama">"button"</span>&gt; <input style="height: 20px; width: 30px;" type="button"> <label for="button">clique aqui</label></li>
-                <li>&lt;<span class="azul">input type</span> =<span class="ama">"color"</span>&gt; <input type="color"></li>
+                <li>&lt;<span class="azul">input type</span> =<span class="ama">"button"</span>&gt; <input style="height: 20px; width: 80px;" type="button" value="clique aqui"> <label for="button">clique aqui</label></li>
+                <li>&lt;<span class="azul">input type</span> =<span class="ama">"<abbr title="Para definir a cor inicial, coloca value e a cor em hexadecimal">color</abbr>"</span>&gt; <input type="color"></li>
                 <li>&lt;<span class="azul">input type</span> =<span class="ama">"email"</span>&gt; <input type="email"></li>
-                <li>&lt;<span class="azul">input type</span> =<span class="ama">"file"</span>&gt; <input type="file"></li>
+                <li>&lt;<span class="azul">input type</span> =<span class="ama">"<abbr title="para este método só pode usar o método POST">file</abbr>"</span>&gt; <input type="file"></li>
                 <li>&lt;<span class="azul">input type</span> =<span class="ama">"hidden"</span>&gt; <input type="hidden"> <label for="hidden"> clique aqui</label></li>
                 <li>&lt;<span class="azul">input type</span> =<span class="ama">"month"</span>&gt;<input type="month"></label></li>
                 <li>&lt;<span class="azul">input type</span> =<span class="ama">"date"</span>&gt;<input type="date"></label></li>
                 <li>&lt;<span class="azul">input type</span> =<span class="ama">"time"</span>&gt;<input type="time"></label></li>
+                <li>&lt;<span class="azul">input type</span> =<span class="ama">"<abbr title="use Min e Max para definir o alcance do range. E value para definir onde a bolinha começa">range</abbr>"</span>&gt;<input type="range"></label></li>
             </ul>
     </section>
 
