--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Resumo dos meus estudos</title>
                 <link rel="stylesheet" href="style.css">
+                <link rel="stylesheet" href="estilo-celular.css">
                     <link rel="shortcut icon" href="imagens/favicon/favicon.ico" type="image/x-icon">
+                     
     </head>
 <body>
     <div class="menu-lateral">
